--- a/0.md
+++ b/0.md
@@ -8,3 +8,6 @@ I've used this email to make an order, the shipping address was sent to Taiwan.
 I would be appreciated if someone could check if my order is good or not.
 
 Thank you.
+
+# 1K points
+https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/
