--- a/0.md
+++ b/0.md
@@ -9,5 +9,11 @@ I would be appreciated if someone could check if my order is good or not.
 
 Thank you.
 
-# 1K points
+# 1000 plus points
 https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/
+
+# Others
+https://www.myharvardclassics.com/categories/20120212
+http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1
+http://blog.dilbert.com/2013/11/18/goals-vs-systems/
+https://www.1843magazine.com/features/code-to-joy
