--- a/0.md
+++ b/0.md
@@ -12,6 +12,9 @@ Thank you.
 # 1000 plus points
 https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/
 
+# For babies
+https://www.npr.org/sections/ed/2018/05/24/611609366/whats-going-on-in-your-childs-brain-when-you-read-them-a-story
+
 # Others
 https://www.myharvardclassics.com/categories/20120212
 http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1
