--- a/0.md
+++ b/0.md
@@ -24,3 +24,7 @@ https://coolbackgrounds.io/
 https://wiredjs.com/
 https://techcrunch.com/2018/05/27/pornography-and-the-butterfly-effect/
 http://www.brightball.com/articles/reality-driven-development-fixing-project-management-in-software
+https://stratechery.com/2018/the-bill-gates-line/
+
+# Algorithms
+https://github.com/trekhleb/javascript-algorithms
