--- a/0.md
+++ b/0.md
@@ -28,3 +28,6 @@ https://stratechery.com/2018/the-bill-gates-line/
 
 # Algorithms
 https://github.com/trekhleb/javascript-algorithms
+
+# Data Science
+http://www.cs.cornell.edu/jeh/book.pdf
