--- a/0.md
+++ b/0.md
@@ -1,4 +1,5 @@
-
+# Lectures
+https://nancysbraintalks.mit.edu/course/9-11-the-human-brain
 
 # 1000 plus points
 https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/
