--- a/0.md
+++ b/0.md
@@ -1,3 +1,6 @@
+# Discussions
+https://news.ycombinator.com/item?id=17217210
+
 # High Points Articles
 https://nancysbraintalks.mit.edu/course/9-11-the-human-brain
 
