--- a/0.md
+++ b/0.md
@@ -1,3 +1,6 @@
+# NPR
+https://www.npr.org/sections/ed/2018/06/02/611082566/why-children-arent-behaving-and-what-you-can-do-about-it
+
 # Discussions
 https://news.ycombinator.com/item?id=17217210
 
