--- a/0.md
+++ b/0.md
@@ -37,3 +37,7 @@ https://jasonhpriestley.com/lr
 
 # Data Science
 http://www.cs.cornell.edu/jeh/book.pdf
+
+# Machine Learning
+http://www.r2d3.us/
+https://news.ycombinator.com/item?id=17338008
