--- a/0.md
+++ b/0.md
@@ -12,6 +12,9 @@ https://mobile.nytimes.com/2018/06/20/technology/personaltech/firefox-chrome-bro
 # High Points Articles
 https://nancysbraintalks.mit.edu/course/9-11-the-human-brain
 
+# Math
+http://www.cs.yale.edu/homes/aspnes/classes/202/notes.pdf
+
 # 1000 plus points
 https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learning-a-new-skill/
 
@@ -19,6 +22,9 @@ https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learn
 https://www.npr.org/sections/ed/2018/05/24/611609366/whats-going-on-in-your-childs-brain-when-you-read-them-a-story
 
 # Others
+https://www.universal-sci.com/headlines/2018/6/22/new-model-predicts-that-were-probably-the-only-advanced-civilization-in-the-observable-universe
+https://vuehandbook.com/
+https://kb.osu.edu/dspace/bitstream/handle/1811/72567/OSLJ_V2N3_0241.pdf
 https://starttls-everywhere.org/
 http://forums.watchuseek.com/f222/genuine-eulit-perlon-strap-3040090.html
 https://www.myharvardclassics.com/categories/20120212
