--- a/0.md
+++ b/0.md
@@ -1,8 +1,16 @@
+# Learning
+https://artofproblemsolving.com/articles/hard-problems
+https://dev.tube/
+https://developer.mozilla.org/en-US/docs/Tools/Accessibility_inspector
+
 # Career
 https://gecd.mit.edu/sites/default/files/about/files/career-handbook.pdf
 
 # NPR
 https://www.npr.org/sections/ed/2018/06/02/611082566/why-children-arent-behaving-and-what-you-can-do-about-it
+
+# Parenting
+https://www.theatlantic.com/magazine/archive/2018/07/the-dangers-of-distracted-parenting/561752/
 
 # Discussions
 https://news.ycombinator.com/item?id=17217210
@@ -22,6 +30,11 @@ https://azeria-labs.com/the-importance-of-deep-work-the-30-hour-method-for-learn
 https://www.npr.org/sections/ed/2018/05/24/611609366/whats-going-on-in-your-childs-brain-when-you-read-them-a-story
 
 # Others
+http://cs.brown.edu/~sk/Publications/Papers/Published/kf-prog-paradigms-and-beyond/paper.pdf
+https://www.theatlantic.com/health/archive/2014/06/happily-ever-after/372573/?single_page=true
+https://posts.alexgr.in/losing-100-pounds-in-276-days/
+http://habitatchronicles.com/2004/04/you-cant-tell-people-anything/
+http://news.mit.edu/2018/mit-scientists-discover-fundamental-rule-of-brain-plasticity-0622
 https://www.universal-sci.com/headlines/2018/6/22/new-model-predicts-that-were-probably-the-only-advanced-civilization-in-the-observable-universe
 https://vuehandbook.com/
 https://kb.osu.edu/dspace/bitstream/handle/1811/72567/OSLJ_V2N3_0241.pdf
