--- a/0.md
+++ b/0.md
@@ -1,3 +1,6 @@
+# Cool Stuff
+https://blog.joinmastodon.org/2018/06/why-activitypub-is-the-future/
+
 # Books
 https://apps.npr.org/best-books-2017/
 
