--- a/0.md
+++ b/0.md
@@ -13,6 +13,8 @@ https://news.ycombinator.com/item?id=17513576
 http://tools.google.com/seedbank/
 https://bloomberg.github.io/foml/#lectures
 
+# Web
+https://engineering.videoblocks.com/web-architecture-101-a3224e126947?ref=abhimanyu
 
 # React
 https://github.com/adam-golab/react-developer-roadmap
