--- a/0.md
+++ b/0.md
@@ -1,3 +1,9 @@
+# MUST
+https://www.nytimes.com/2018/07/12/style/joy-of-missing-out-summer.html
+https://itunes.apple.com/us/app/moment-screen-time-tracker/id771541926?mt=8
+https://www.cs.utexas.edu/users/EWD/transcriptions/EWD05xx/EWD594.html
+
+
 https://www.dotnetjalps.com/2015/06/getting-started-autofac.html
 https://blog.johnwu.cc/article/asp-net-core-dependency-injection.html
 http://www.davidhayden.me/blog/asp-net-5-dependency-injection-with-autofac
