--- a/0.md
+++ b/0.md
@@ -1,3 +1,7 @@
+# Desgin Pattern
+http://www.codedata.com.tw/java/decorator-01/
+http://oomusou.io/design-pattern/decorator/
+
 # MUST
 https://www.nytimes.com/2018/07/12/style/joy-of-missing-out-summer.html
 https://itunes.apple.com/us/app/moment-screen-time-tracker/id771541926?mt=8
