--- a/0.md
+++ b/0.md
@@ -1,3 +1,8 @@
+# Why Use Iterator
+https://stackoverflow.com/questions/1088442/what-is-the-purpose-advantage-of-using-yield-return-iterators-in-c
+https://stackoverflow.com/questions/410026/proper-use-of-yield-return
+
+# Temp
 https://dev.twsiyuan.com/2016/03/csharp-ienumerable-ienumerator-and-yield-return.html
 https://www.cnblogs.com/mqxs/p/6238361.html
 https://ithelp.ithome.com.tw/articles/10193586
