--- a/0.md
+++ b/0.md
@@ -57,6 +57,9 @@ https://artofproblemsolving.com/articles/hard-problems
 https://dev.tube/
 https://developer.mozilla.org/en-US/docs/Tools/Accessibility_inspector
 
+# Machine Learning
+https://docs.google.com/presentation/d/1kSuQyW5DTnkVaZEjGYCkfOxvzCqGEFzWBy4e9Uedd9k/preview?imm_mid=0f9b7e&cmp=em-data-na-na-newsltr_20171213&slide=id.g168a3288f7_0_58
+
 # Career
 https://gecd.mit.edu/sites/default/files/about/files/career-handbook.pdf
 
