--- a/0.md
+++ b/0.md
@@ -8,6 +8,10 @@ https://docs.microsoft.com/en-us/dotnet/framework/reflection-and-codedom/reflect
 https://stackoverflow.com/questions/2281972/how-to-get-a-list-of-properties-with-a-given-attribute
 
 https://news.ycombinator.com/item?id=17654487
+https://www.keyvalues.com/blog/engineering-whiteboard-interviews-yay-or-nay
+
+# CSS 
+https://bulma.io/
 
 # Teach CS
 https://csunplugged.org/en/
