--- a/0.md
+++ b/0.md
@@ -1,3 +1,5 @@
+
+
 https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/keywords/ref
 https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/passing-reference-type-parameters
 
@@ -9,6 +11,9 @@ https://stackoverflow.com/questions/2281972/how-to-get-a-list-of-properties-with
 
 https://news.ycombinator.com/item?id=17654487
 https://www.keyvalues.com/blog/engineering-whiteboard-interviews-yay-or-nay
+
+# Web
+https://zen-of-programming.com/design/
 
 # CSS 
 https://bulma.io/
