--- a/0.md
+++ b/0.md
@@ -17,6 +17,12 @@ https://stackoverflow.com/questions/2281972/how-to-get-a-list-of-properties-with
 https://news.ycombinator.com/item?id=17654487
 https://www.keyvalues.com/blog/engineering-whiteboard-interviews-yay-or-nay
 
+# Crytography
+https://www.intensecrypto.org/public/
+
+# Career
+https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d
+
 # Web
 https://zen-of-programming.com/design/
 
@@ -92,6 +98,7 @@ https://docs.google.com/presentation/d/1kSuQyW5DTnkVaZEjGYCkfOxvzCqGEFzWBy4e9Ued
 https://blog.floydhub.com/ten-techniques-from-fast-ai/
 https://www-users.cs.umn.edu/~kumar001/dmbook/index.php
 http://www.fast.ai/2018/08/27/grad-school/
+https://github.com/andri27-ts/60_Days_RL_Challenge
 
 # Career
 https://gecd.mit.edu/sites/default/files/about/files/career-handbook.pdf
