--- a/0.md
+++ b/0.md
@@ -1,4 +1,5 @@
 https://blog.mouten.info/%E3%82%A4%E3%83%A4%E3%83%9B%E3%83%B3-denon-ah-c820-%E3%83%AC%E3%83%93%E3%83%A5%E3%83%BC-%E3%83%80%E3%82%A4%E3%83%8A%E3%83%9F%E3%83%83%E3%82%AF%E5%9E%8B%E3%82%A4%E3%83%A4%E3%83%9B%E3%83%B3%E3%81%AE%E6%9C%80%E9%AB%98%E5%B3%B0-85469218c8a3
+https://www.nybooks.com/articles/1986/10/09/why-read-the-classics/
 
 http://www.black.design/
 
@@ -16,6 +17,9 @@ https://stackoverflow.com/questions/2281972/how-to-get-a-list-of-properties-with
 
 https://news.ycombinator.com/item?id=17654487
 https://www.keyvalues.com/blog/engineering-whiteboard-interviews-yay-or-nay
+
+# Knowledge
+http://gordonbrander.com/pattern/
 
 # Crytography
 https://www.intensecrypto.org/public/
