--- a/0.md
+++ b/0.md
@@ -17,6 +17,22 @@ https://stackoverflow.com/questions/2281972/how-to-get-a-list-of-properties-with
 
 https://news.ycombinator.com/item?id=17654487
 https://www.keyvalues.com/blog/engineering-whiteboard-interviews-yay-or-nay
+https://www.portsmouthctc.org.uk/a-fighter-pilots-guide-to-surviving-on-the-roads/
+https://lethain.com//notes-philosophy-software-design/
+https://www.independent.co.uk/life-style/fall-asleep-two-minutes-how-to-military-secret-trick-a8520991.html
+https://people.eecs.berkeley.edu/~rcs/research/interactive_latency.html
+
+# SQL
+https://selectstarsql.com/
+
+# GO
+https://thorstenball.com/blog/2018/09/04/the-tools-i-use-to-write-books/
+
+# Math
+http://people.uncw.edu/hermanr/mat361/ODEBook/
+
+# DataSet
+https://toolbox.google.com/datasetsearch/search?query=medical&docid=ydEMteNkQ4GWzuzyAAAAAA%3D%3D
 
 # Knowledge
 http://gordonbrander.com/pattern/
