--- a/0.md
+++ b/0.md
@@ -22,6 +22,9 @@ https://lethain.com//notes-philosophy-software-design/
 https://www.independent.co.uk/life-style/fall-asleep-two-minutes-how-to-military-secret-trick-a8520991.html
 https://people.eecs.berkeley.edu/~rcs/research/interactive_latency.html
 
+# Static Sites
+https://www.staticgen.com/
+
 # SQL
 https://selectstarsql.com/
 
