--- a/0.md
+++ b/0.md
@@ -1,3 +1,5 @@
+
+
 https://github.com/auchenberg/volkswagen
 https://news.ycombinator.com/item?id=17999659
 https://techyaks.com/
@@ -28,6 +30,10 @@ https://www.drmaciver.com/2016/05/how-to-read-a-mathematics-textbook/
 http://explained.ai/decision-tree-viz/index.html
 https://pi-hole.net/
 https://www.troyhunt.com/mmm-pi-hole/
+
+# Coding Site
+http://blog.jobbole.com/67820/
+https://hk.saowen.com/a/c37698d64ce9a29e468a59a94a047b248e80236886bac9e55f2aba0cbc72910e
 
 # Static Sites
 https://www.staticgen.com/
